k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopintelli
  labels:
    name: shopintelli
